data/DistUpgrade.cfg: keep system-config-printer-gnome installed when upgrading with the ubuntu-gnome-desktop metapkg. (LP: #1637466)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.04.4) UNRELEASED; urgency=medium
+
+  * data/DistUpgrade.cfg: keep system-config-printer-gnome installed when
+    upgrading with the ubuntu-gnome-desktop metapkg. (LP: #1637466)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 01 Nov 2016 15:28:28 -0700
+
 ubuntu-release-upgrader (1:17.04.3) zesty; urgency=medium
 
   * data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported
