DistUpgrade/DistUpgradeCache.py: when checking for free space in boot also check for kernels being upgraded not just installed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
 ubuntu-release-upgrader (1:17.04.4) UNRELEASED; urgency=medium
 
-  * data/DistUpgrade.cfg: keep system-config-printer-gnome installed when
-    upgrading with the ubuntu-gnome-desktop metapkg. (LP: #1637466)
+  * DistUpgrade/DistUpgradeCache.py: when checking for free space in boot also
+    check for kernels being upgraded not just installed.
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 01 Nov 2016 15:28:28 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 14 Nov 2016 15:09:32 -0800
 
 ubuntu-release-upgrader (1:17.04.3) zesty; urgency=medium
 
