releasing package ubuntu-release-upgrader version 1:17.04.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:17.04.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.04.4) zesty; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: when checking for free space in boot also
     check for kernels being upgraded not just installed.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 14 Nov 2016 15:09:32 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 15 Nov 2016 15:34:15 -0800
 
 ubuntu-release-upgrader (1:17.04.3) zesty; urgency=medium
 
