--- a/po/gl.po
+++ b/po/gl.po
@@ -10,22 +10,22 @@ msgstr ""
 "Project-Id-Version: gl\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2013-06-26 08:47+0000\n"
-"Last-Translator: Marcos Lans <Unknown>\n"
+"PO-Revision-Date: 2016-11-25 17:01+0000\n"
+"Last-Translator: Xosé <Unknown>\n"
 "Language-Team: galician\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2016-11-23 06:26+0000\n"
-"X-Generator: Launchpad (build 18269)\n"
+"X-Launchpad-Export-Date: 2016-11-26 05:43+0000\n"
+"X-Generator: Launchpad (build 18282)\n"
 "Language: \n"
 
 #. TRANSLATORS: %s is a country
 #: ../DistUpgrade/distro.py:211 ../DistUpgrade/distro.py:442
 #, python-format
 msgid "Server for %s"
-msgstr "Servidor desde %s"
+msgstr "Servidor situado en %s"
 
 #. More than one server is used. Since we don't handle this case
 #. in the user interface we set "custom servers" to true and
@@ -1471,15 +1471,15 @@ msgstr[1] "Hanse retirar %d paquetes."
 #, python-format
 msgid "%d new package is going to be installed."
 msgid_plural "%d new packages are going to be installed."
-msgstr[0] "Instalarase %d paquete novo."
-msgstr[1] "Instalaranse %d paquetes novos."
+msgstr[0] "Hase instalar %d paquete novo."
+msgstr[1] "Hanse instalar %d paquetes novos."
 
 #: ../DistUpgrade/DistUpgradeView.py:392
 #, python-format
 msgid "%d package is going to be upgraded."
 msgid_plural "%d packages are going to be upgraded."
-msgstr[0] "Anovarase %d paquete."
-msgstr[1] "Anovaranse %d paquetes."
+msgstr[0] "Hase anovar %d paquete."
+msgstr[1] "Hanse anovar %d paquetes."
 
 #: ../DistUpgrade/DistUpgradeView.py:400
 #, python-format
@@ -1498,7 +1498,7 @@ msgid ""
 "finished, the process cannot be canceled."
 msgstr ""
 "A instalación da anovación pode levar varias horas. En canto remate a "
-"descarga, o proceso non se pode cancelar."
+"descarga non será posíbel cancelar o proceso."
 
 #: ../DistUpgrade/DistUpgradeView.py:409
 msgid ""
@@ -1506,7 +1506,7 @@ msgid ""
 "download has finished, the process cannot be canceled."
 msgstr ""
 "Obter e instalar a anovación pode levar varias horas. En canto remate a "
-"descarga, o proceso non se pode cancelar."
+"descarga non será posíbel cancelar o proceso."
 
 #: ../DistUpgrade/DistUpgradeView.py:414
 msgid "Removing the packages can take several hours. "
