Fix new pyflakes/pep8 failures. Ignore apt_btrfs_snapshot.py errors as this isn't our file (it's copied).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.04.5) UNRELEASED; urgency=medium
+
+  * Fix new pyflakes/pep8 failures. Ignore apt_btrfs_snapshot.py errors as
+    this isn't our file (it's copied).
+
+ -- Iain Lane <iain@orangesquash.org.uk>  Tue, 29 Nov 2016 16:05:02 +0000
+
 ubuntu-release-upgrader (1:17.04.4) zesty; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: when checking for free space in boot also
