releasing package ubuntu-release-upgrader version 1:17.04.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ubuntu-release-upgrader (1:17.04.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.04.5) zesty; urgency=medium
 
+  [ Iain Lane ]
   * Fix new pyflakes/pep8 failures. Ignore apt_btrfs_snapshot.py errors as
     this isn't our file (it's copied).
 
- -- Iain Lane <iain@orangesquash.org.uk>  Tue, 29 Nov 2016 16:05:02 +0000
+ -- Brian Murray <brian@ubuntu.com>  Tue, 29 Nov 2016 12:16:49 -0800
 
 ubuntu-release-upgrader (1:17.04.4) zesty; urgency=medium
 
