DistUpgrade/ReleaseAnnouncment: Fix release number and link to Release Notes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.10.7) yakkety-proposed; urgency=medium
+
+  * DistUpgrade/ReleaseAnnouncment: Fix release number and link to
+    Release Notes.
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 Oct 2016 10:12:24 -0700
+
 ubuntu-release-upgrader (1:16.10.6) yakkety; urgency=medium
 
   * DistUpgradeViewNonInteractive.py: When handling an exception also log what
