* data/DistUpgradeQuirks.py: configure the quirk which installs the linux   metapackage to run for every release upgrade. (LP: #1633903) * data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported   metapkgs. (LP: #1632665) * DistUpgrade/ReleaseNotesViewerWebkit.py: fix indentation of function   _on_navigation_policy_decision_requested. (LP: #1635155)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:16.10.8) yakkety-proposed; urgency=medium
+
+  * data/DistUpgradeQuirks.py: configure the quirk which installs the linux
+    metapackage to run for every release upgrade. (LP: #1633903)
+  * data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported
+    metapkgs. (LP: #1632665)
+  * DistUpgrade/ReleaseNotesViewerWebkit.py: fix indentation of function
+    _on_navigation_policy_decision_requested. (LP: #1635155)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 25 Oct 2016 12:13:12 -0700
+
 ubuntu-release-upgrader (1:16.10.7) yakkety-proposed; urgency=medium
 
   * DistUpgrade/ReleaseAnnouncment: Fix release number and link to
