No change rebuild so the dist-upgrader tarball will be signed with the new method. (LP: #1645906)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.10.9) yakkety-proposed; urgency=medium
+
+  * No change rebuild so the dist-upgrader tarball will be signed with the new
+    method. (LP: #1645906)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 29 Nov 2016 14:59:34 -0800
+
 ubuntu-release-upgrader (1:16.10.8) yakkety-proposed; urgency=medium
 
   * data/DistUpgradeQuirks.py: configure the quirk which installs the linux
