releasing package ubuntu-release-upgrader version 1:16.10.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:16.10.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.10.10) yakkety; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: import kernel initrd size estimation
     code from update-manager (since u-r-u is the only consumer of it) and
     refactor in order to give more accurate estimates.  LP: #1646222.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 21 Dec 2016 15:54:51 -0600
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 21 Dec 2016 17:54:07 -0600
 
 ubuntu-release-upgrader (1:16.10.9) yakkety-proposed; urgency=medium
 
