--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:17.04.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.04.6) zesty; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: import kernel initrd size estimation
     code from update-manager (since u-r-u is the only consumer of it) and
     refactor in order to give more accurate estimates.  LP: #1646222.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 21 Dec 2016 15:29:10 -0600
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 21 Dec 2016 15:41:25 -0600
 
 ubuntu-release-upgrader (1:17.04.5) zesty; urgency=medium
 
