--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:17.04.7) UNRELEASED; urgency=medium
+
+  * No change rebuild to update promotions, demotions, and mirror lists.
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 11 Apr 2017 08:56:27 -0700
+
 ubuntu-release-upgrader (1:17.04.6) zesty; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: import kernel initrd size estimation
