releasing package ubuntu-release-upgrader version 1:17.04.7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:17.04.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.04.7) zesty; urgency=medium
 
   * No change rebuild to update promotions, demotions, and mirror lists.
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 11 Apr 2017 08:56:27 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 11 Apr 2017 08:57:42 -0700
 
 ubuntu-release-upgrader (1:17.04.6) zesty; urgency=medium
 
