--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:17.10.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:
+    - updated for 17.04 -> 17.10
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 Apr 2017 14:13:46 -0700
+
 ubuntu-release-upgrader (1:17.04.7) zesty; urgency=medium
 
   * No change rebuild to update promotions, demotions, and mirror lists.
