--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:17.10.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.10.1) artful; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/window_main.ui,
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:17.10.1) UNRELEASED; urgency=medium
     pre-build.sh:
     - updated for 17.04 -> 17.10
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 24 Apr 2017 14:13:46 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 Apr 2017 14:15:07 -0700
 
 ubuntu-release-upgrader (1:17.04.7) zesty; urgency=medium
 
