--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.10.2) UNRELEASED; urgency=medium
+
+  * Turn on screen's logging in screenrc instead of via command line because
+    the command line syntax is changed in screen 4.5.0 (LP: #1686117)
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Thu, 27 Apr 2017 18:33:00 +0200
+
 ubuntu-release-upgrader (1:17.10.1) artful; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
