--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.10.3) UNRELEASED; urgency=medium
+
+  * Remove --sandbox (aufs support) as it has been broken for some time and
+    was rather unused. (LP: #1605259)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 17 May 2017 14:38:24 -0700
+
 ubuntu-release-upgrader (1:17.10.2) artful; urgency=medium
 
   [ Balint Reczey ]
