releasing package ubuntu-release-upgrader version 1:17.10.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:17.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.10.4) artful; urgency=medium
 
   * Create demoted.cfg.xenial and DistUpgrade.cfg.xenial so that upgrades from
     Ubuntu 16.04 to Ubuntu 17.10 are supported. (LP: #1692092)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 19 May 2017 13:59:37 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 19 May 2017 14:04:13 -0700
 
 ubuntu-release-upgrader (1:17.10.3) artful; urgency=medium
 
