* Drop obsolete alternate dependencies:   - gir1.2-vte-2.90   - gir1.2-webkit-3.0 * Drop obsolete XS-Testsuite field

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:17.10.5) UNRELEASED; urgency=medium
+
+  * Drop obsolete alternate dependencies:
+    - gir1.2-vte-2.90
+    - gir1.2-webkit-3.0
+  * Drop obsolete XS-Testsuite field
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Sat, 17 Jun 2017 12:14:48 -0400
+
 ubuntu-release-upgrader (1:17.10.4) artful; urgency=medium
 
   * Create demoted.cfg.xenial and DistUpgrade.cfg.xenial so that upgrades from
