do-release-upgrade: Clarify that the "-d" switch is only for upgrading from the latest supported release to the development release, not any release. Additionally, provide a specific error message if run with -d and not running the latest supported release. (LP: #1700829)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
 ubuntu-release-upgrader (1:17.10.5) UNRELEASED; urgency=medium
 
+  [ Jeremy Bicha ]
   * Drop obsolete alternate dependencies:
     - gir1.2-vte-2.90
     - gir1.2-webkit-3.0
   * Drop obsolete XS-Testsuite field
+
+  [ Brian Murray ]
+  * do-release-upgrade: Clarify that the "-d" switch is only for upgrading
+    from the latest supported release to the development release, not any
+    release. Additionally, provide a specific error message if run with -d and
+    not running the latest supported release. (LP: #1700829)
 
  -- Jeremy Bicha <jbicha@ubuntu.com>  Sat, 17 Jun 2017 12:14:48 -0400
 
