--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ ubuntu-release-upgrader (1:17.10.5) UNRELEASED; urgency=medium
     from the latest supported release to the development release, not any
     release. Additionally, provide a specific error message if run with -d and
     not running the latest supported release. (LP: #1700829)
+  * build-tarball.sh: Stop updating ubuntu-drivers-obsolete.pkgs since it
+    isn't needed any more see Launchpad bug 1682291 for details.
 
  -- Jeremy Bicha <jbicha@ubuntu.com>  Sat, 17 Jun 2017 12:14:48 -0400
 
