--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:17.10.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.10.5) artful; urgency=medium
 
   [ Jeremy Bicha ]
   * Drop obsolete alternate dependencies:
@@ -14,7 +14,7 @@ ubuntu-release-upgrader (1:17.10.5) UNRELEASED; urgency=medium
   * build-tarball.sh: Stop updating ubuntu-drivers-obsolete.pkgs since it
     isn't needed any more see Launchpad bug 1682291 for details.
 
- -- Jeremy Bicha <jbicha@ubuntu.com>  Sat, 17 Jun 2017 12:14:48 -0400
+ -- Brian Murray <brian@ubuntu.com>  Wed, 12 Jul 2017 14:00:20 -0700
 
 ubuntu-release-upgrader (1:17.10.4) artful; urgency=medium
 
