update the man page for do-release-upgrade too

--- a/data/do-release-upgrade.8
+++ b/data/do-release-upgrade.8
@@ -14,8 +14,8 @@ This is the preferred command if the machine has no graphic environment or if th
 show help message and exit
 .TP 
 \fB\-d\fR, \fB\-\-devel\-release\fR
-Check if upgrading to the latest devel release is
-possible
+If using the latest supported release, upgrade to
+the development release
 .TP 
 \fB\-p\fR, \fB\-\-proposed\fR
 Try upgrading to the latest release using the upgrader
