* Fix new pep8 failures in artful - E722 do not use bare except.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.10.6) UNRELEASED; urgency=medium
+
+  * Fix new pep8 failures in artful - E722 do not use bare except.
+  * Update the manpage regarding '-d' change.
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 Jul 2017 15:22:16 -0700
+
 ubuntu-release-upgrader (1:17.10.5) artful; urgency=medium
 
   [ Jeremy Bicha ]
