--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:17.10.7) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: Provide better instructions when an
+    upgrade is aborted due to a lack of free space in a partition.
+    (LP: #1721882)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 06 Oct 2017 14:51:29 -0700
+
 ubuntu-release-upgrader (1:17.10.6) artful; urgency=medium
 
   * Fix new pep8 failures in artful - E722 do not use bare except.
