--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-ubuntu-release-upgrader (1:17.10.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.10.7) artful; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Provide better instructions when an
     upgrade is aborted due to a lack of free space in a partition.
     (LP: #1721882)
+  * update demoted.cfg, demoted.cfg.xenial, mirrors.cfg
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 06 Oct 2017 14:51:29 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 06 Oct 2017 15:16:34 -0700
 
 ubuntu-release-upgrader (1:17.10.6) artful; urgency=medium
 
