* DistUpgrade/{EOL,Devel}ReleaseAnnouncement,   DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   data/DistUpgrade.cfg.xenial,   pre-build.sh:   - updated for 17.10 -> 18.04

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ubuntu-release-upgrader (1:18.04.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    data/DistUpgrade.cfg.xenial,
+    pre-build.sh:
+    - updated for 17.10 -> 18.04
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 06 Nov 2017 08:21:28 -0800
+
 ubuntu-release-upgrader (1:17.10.7) artful; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Provide better instructions when an
