releasing package ubuntu-release-upgrader version 1:18.04.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.1) bionic; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/window_main.ui,
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:18.04.1) UNRELEASED; urgency=medium
     pre-build.sh:
     - updated for 17.10 -> 18.04
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 06 Nov 2017 09:04:01 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 06 Nov 2017 09:17:38 -0800
 
 ubuntu-release-upgrader (1:17.10.7) artful; urgency=medium
 
