--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:18.04.2) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: Provide a better error message if
+    /var does not have enough free space and a generic fallback error message
+    if it is a parition without a specific remedy. (LP: #1729368)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 08 Nov 2017 11:04:47 -0800
+
 ubuntu-release-upgrader (1:18.04.1) bionic; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
