--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:18.04.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.2) bionic; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Provide a better error message if
     /var does not have enough free space and a generic fallback error message
     if it is a parition without a specific remedy. (LP: #1729368)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 08 Nov 2017 11:04:47 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 08 Nov 2017 11:15:54 -0800
 
 ubuntu-release-upgrader (1:18.04.1) bionic; urgency=medium
 
