data/release-upgrades: switch prompt from normal to LTS (LP: #1740523)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.04.3) UNRELEASED; urgency=medium
+
+  * data/release-upgrades: switch prompt from normal to LTS (LP: #1740523)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 02 Jan 2018 13:45:54 -0800
+
 ubuntu-release-upgrader (1:18.04.2) bionic; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Provide a better error message if
