--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:18.04.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.3) bionic; urgency=medium
 
   * data/release-upgrades: switch prompt from normal to LTS (LP: #1740523)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 02 Jan 2018 13:45:54 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 02 Jan 2018 13:46:53 -0800
 
 ubuntu-release-upgrader (1:18.04.2) bionic; urgency=medium
 
