DistUpgradeController.py: Check that /boot/efi is a rw-mounted partition if we are upgrading an EFI system with bootloader (LP: #1695666)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.04.4) bionic; urgency=medium
+
+  * DistUpgradeController.py: Check that /boot/efi is a rw-mounted partition
+    if we are upgrading an EFI system with bootloader (LP: #1695666)
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Fri, 12 Jan 2018 15:37:01 +0100
+
 ubuntu-release-upgrader (1:18.04.3) bionic; urgency=medium
 
   * data/release-upgrades: switch prompt from normal to LTS (LP: #1740523)
