--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.6) bionic; urgency=medium
 
   * DistUpgradeFetcherKDE.py:
     - ensure theming is correct across all Qt versions and Plasma versions
