--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.04.7) UNRELEASED; urgency=medium
+
+  * DistUpgradeController.py: Improve wording for the EFI System
+    Partition messages as suggested by Steve Langasek in LP 1695666.
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Fri, 26 Jan 2018 10:36:41 +0100
+
 ubuntu-release-upgrader (1:18.04.6) bionic; urgency=medium
 
   * DistUpgradeFetcherKDE.py:
