DistUpgradeFetcherKDE.py: Drop unneeded pyqtSlot, QUrl, breaks pyflakes

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ ubuntu-release-upgrader (1:18.04.7) UNRELEASED; urgency=medium
   [ Julian Andres Klode ]
   * DistUpgradeController.py: Improve wording for the EFI System
     Partition messages as suggested by Steve Langasek in LP 1695666.
+  * DistUpgradeFetcherKDE.py: Drop unneeded pyqtSlot, QUrl, breaks
+    pyflakes
 
   [ Jean-Baptiste Lallement ]
   * When rewritting sources.list and the entry is not a valid mirror,
