DistUpgradeController.py: Only add a new entry for previously unknown mirrors if the new entries distro is a valid release. (LP: #1744722)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ ubuntu-release-upgrader (1:18.04.7) UNRELEASED; urgency=medium
     Partition messages as suggested by Steve Langasek in LP 1695666.
   * DistUpgradeFetcherKDE.py: Drop unneeded pyqtSlot, QUrl, breaks
     pyflakes
+  * DistUpgradeController.py: Only add a new entry for previously
+    unknown mirrors if the new entries distro is a valid release.
+    (LP: #1744722)
 
   [ Po-Hsu Lin ]
   * DistUpgrade/DistUpgradeController.py:
