--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.7) bionic; urgency=medium
 
   [ Julian Andres Klode ]
   * DistUpgradeController.py: Improve wording for the EFI System
@@ -16,7 +16,7 @@ ubuntu-release-upgrader (1:18.04.7) UNRELEASED; urgency=medium
       for some languages, as the sentence might need to be rearranged.
       Use format() and named-variables to fix this issue.
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Fri, 26 Jan 2018 10:36:41 +0100
+ -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 29 Jan 2018 14:23:23 +0100
 
 ubuntu-release-upgrader (1:18.04.6) bionic; urgency=medium
 
