--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.04.8) bionic; urgency=medium
+
+  * data/DistUpgrade.cfg: Add ubuntu-budgie-desktop support.
+  * Run pre-build.sh to update mirrors.cfg and demoted.cfg.
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Mon, 05 Feb 2018 04:00:06 -0700
+
 ubuntu-release-upgrader (1:18.04.7) bionic; urgency=medium
 
   [ Julian Andres Klode ]
