--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.10.8) artful; urgency=medium
+
+  * data/removal_blacklist.cfg: unblacklist unity so that release upgrades to
+    17.10 for systems without universe enabled can proceed. (LP: #1725605)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 23 Oct 2017 17:07:56 -0700
+
 ubuntu-release-upgrader (1:17.10.7) artful; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Provide better instructions when an
