--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.04.9) UNRELEASED; urgency=medium
+
+  * Check that a sources.list entry for the "from" distribution exists
+    before attempting to upgrade (LP: #1725359)
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Wed, 07 Feb 2018 11:09:03 +0100
+
 ubuntu-release-upgrader (1:18.04.8) bionic; urgency=medium
 
   * data/DistUpgrade.cfg: Add ubuntu-budgie-desktop support.
