--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.04.9) UNRELEASED; urgency=medium
+
+  * Place .keep files in empty directories to keep them when converting the
+    repo to git
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Sun, 11 Feb 2018 01:34:43 +0700
+
 ubuntu-release-upgrader (1:18.04.8) bionic; urgency=medium
 
   * data/DistUpgrade.cfg: Add ubuntu-budgie-desktop support.
