--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,16 @@
 ubuntu-release-upgrader (1:18.04.9) UNRELEASED; urgency=medium
 
+  [ Balint Reczey ]
   * Place .keep files in empty directories to keep them when converting the
     repo to git
   * Raise privileges in do-partial-upgrade early with pkexec and apply
     Wayland workaround when needed (LP: #1748509)
 
- -- Balint Reczey <rbalint@ubuntu.com>  Sun, 11 Feb 2018 23:07:12 +0700
+  [ Brian Murray ]
+  * debian/control: have python3-distupgrade depend on sensible-utils.
+    (LP: #1724224)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 14 Feb 2018 14:31:16 -0800
 
 ubuntu-release-upgrader (1:18.04.8) bionic; urgency=medium
 
