--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,7 @@ ubuntu-release-upgrader (1:18.04.9) UNRELEASED; urgency=medium
   [ Brian Murray ]
   * debian/control: have python3-distupgrade depend on sensible-utils.
     (LP: #1724224)
-  * DistUpgrade/DistUpgradeController.py: In a couuple of spots roll back
+  * DistUpgrade/DistUpgradeController.py: In a couple of spots roll back
     changes made for the upgrade instead of just exiting.
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 14 Feb 2018 14:31:16 -0800
