--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.9) bionic; urgency=medium
 
   [ Balint Reczey ]
   * Place .keep files in empty directories to keep them when converting the
@@ -12,7 +12,7 @@ ubuntu-release-upgrader (1:18.04.9) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeController.py: In a couple of spots roll back
     changes made for the upgrade instead of just exiting.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 14 Feb 2018 14:31:16 -0800
+ -- Brian Murray <brian@ubuntu.com>  Thu, 22 Feb 2018 13:43:35 -0800
 
 ubuntu-release-upgrader (1:18.04.8) bionic; urgency=medium
 
