--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2013-07-04 15:35+0000\n"
-"Last-Translator: Igor Zubarev <igor.zubarev@gmail.com>\n"
+"PO-Revision-Date: 2018-02-23 13:10+0000\n"
+"Last-Translator: Maxim Petrov <maximpetrov@yahoo.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2018-02-21 05:52+0000\n"
-"X-Generator: Launchpad (build 18553)\n"
+"X-Launchpad-Export-Date: 2018-02-24 05:52+0000\n"
+"X-Generator: Launchpad (build 18561)\n"
 "Language: ru\n"
 
 #. TRANSLATORS: %s is a country
@@ -1856,7 +1856,7 @@ msgid ""
 "%(url)s\n"
 msgstr ""
 "Для получения информации об обновлении посетите:\n"
-"%(url)\n"
+"%(url)s\n"
 
 #: ../do-release-upgrade:141
 msgid "No new release found"
