--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.04.14) UNRELEASED; urgency=medium
+
+  * Purge obsolete packages, if user agrees to remove obsolete
+    packages. LP: #1749199
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Fri, 30 Mar 2018 09:32:47 +0100
+
 ubuntu-release-upgrader (1:18.04.13) bionic; urgency=medium
 
   * Do not consider Suggests important, so automatically installed packages
