--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.04.10) UNRELEASED; urgency=medium
+
+  * Use HTTPS for changelogs.ubuntu.com (LP: #1744318)
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 15 Mar 2018 11:20:19 +0100
+
 ubuntu-release-upgrader (1:18.04.9) bionic; urgency=medium
 
   [ Balint Reczey ]
