releasing package ubuntu-release-upgrader version 1:18.04.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:18.04.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.10) bionic; urgency=medium
 
   * Use HTTPS for changelogs.ubuntu.com (LP: #1744318)
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 15 Mar 2018 11:20:19 +0100
+ -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 15 Mar 2018 13:47:43 +0100
 
 ubuntu-release-upgrader (1:18.04.9) bionic; urgency=medium
 
