Port away from kdesudo.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.04.12) bionic; urgency=medium
+
+  * Port away from kdesudo.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 16 Mar 2018 22:15:31 -0500
+
 ubuntu-release-upgrader (1:18.04.11) bionic; urgency=medium
 
   * Check that a sources.list entry for the from distribution exists
