Do not consider Suggests important, so automatically installed packages that are not recommended or dependend on anymore are removed across a dist upgrade (LP: #1725861)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:18.04.12) UNRELEASED; urgency=medium
+
+  * Do not consider Suggests important, so automatically installed packages
+    that are not recommended or dependend on anymore are removed across a
+    dist upgrade (LP: #1725861)
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 19 Mar 2018 15:19:12 +0100
+
 ubuntu-release-upgrader (1:18.04.11) bionic; urgency=medium
 
   * Check that a sources.list entry for the from distribution exists
