change to unreleased until autopkgtests are sorted.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.12) bionic; urgency=medium
+ubuntu-release-upgrader (1:18.04.12) UNRELEASED; urgency=medium
 
   * Port away from kdesudo.
 
