Increase the size of the buffer used when calculating the free space to estimate for the initramfs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 ubuntu-release-upgrader (1:18.04.12) UNRELEASED; urgency=medium
 
+  [ Simon Quigley ]
   * Port away from kdesudo.
+
+  [ Brian Murray ]
+  * Increase the size of the buffer used when calculating the free space to
+    estimate for the initramfs.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 16 Mar 2018 22:15:31 -0500
 
