--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.12) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.12) bionic; urgency=medium
 
   [ Simon Quigley ]
   * Port away from kdesudo.
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:18.04.12) UNRELEASED; urgency=medium
   * Increase the size of the buffer used when calculating the free space to
     estimate for the initramfs.
 
- -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 16 Mar 2018 22:15:31 -0500
+ -- Brian Murray <brian@ubuntu.com>  Wed, 21 Mar 2018 16:32:15 -0700
 
 ubuntu-release-upgrader (1:18.04.11) bionic; urgency=medium
 
