releasing package ubuntu-release-upgrader version 1:18.04.13

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:18.04.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.13) bionic; urgency=medium
 
   * Do not consider Suggests important, so automatically installed packages
     that are not recommended or dependend on anymore are removed across a
     dist upgrade (LP: #1725861)
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 19 Mar 2018 15:19:12 +0100
+ -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 29 Mar 2018 15:30:19 +0200
 
 ubuntu-release-upgrader (1:18.04.12) bionic; urgency=medium
 
