Make dist-upgrade.py work when PWD != datadir, by fixing the logic for finding and loading .release config files with datadir prepended first.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ ubuntu-release-upgrader (1:18.04.14) UNRELEASED; urgency=medium
   * Purge obsolete packages, if user agrees to remove obsolete
     packages. LP: #1749199
 
+  * Make dist-upgrade.py work when PWD != datadir, by fixing the logic for
+    finding and loading .release config files with datadir prepended
+    first.
+
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Fri, 30 Mar 2018 09:32:47 +0100
 
 ubuntu-release-upgrader (1:18.04.13) bionic; urgency=medium
