Properly drop permissions when opening a browser. (LP: #1174007)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.04.14) bionic; urgency=medium
+
+  * Properly drop permissions when opening a browser. (LP: #1174007)
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Thu, 05 Apr 2018 14:15:37 -0400
+
 ubuntu-release-upgrader (1:18.04.13) bionic; urgency=medium
 
   * Do not consider Suggests important, so automatically installed packages
