Fix long line causing pep8 failure in autopkgtest.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.04.15) bionic; urgency=medium
+
+  * Fix long line causing pep8 failure in autopkgtest.
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Sat, 07 Apr 2018 10:57:08 -0400
+
 ubuntu-release-upgrader (1:18.04.14) bionic; urgency=medium
 
   * Properly drop permissions when opening a browser. (LP: #1174007)
