releasing package ubuntu-release-upgrader version 1:18.04.16

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ubuntu-release-upgrader (1:18.04.16) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.16) bionic; urgency=medium
 
   * Merge Martin Wimpress's changes that update the KeyDependencies of Ubuntu
     MATE packages.
+  * Update of demotions and mirrors data.
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 12 Apr 2018 12:14:08 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 12 Apr 2018 12:48:16 -0700
 
 ubuntu-release-upgrader (1:18.04.15) bionic; urgency=medium
 
