--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:18.04.17) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.17) bionic; urgency=medium
 
   * Update of translations. (LP: #1761931)
   * Update of demotions and mirrors data.
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 17 Apr 2018 13:20:52 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 17 Apr 2018 13:22:03 -0700
 
 ubuntu-release-upgrader (1:18.04.16) bionic; urgency=medium
 
