--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:18.04.18) UNRELEASED; urgency=medium
+
+  * data/removal_blacklist.cfg: Drop unity, ubuntu-gnome-desktop, and
+    ubuntu-mate-cloudtop from the blacklist as they are no longer critical to
+    keep installed. (LP: #1768620)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 02 May 2018 12:31:08 -0700
+
 ubuntu-release-upgrader (1:18.04.17) bionic; urgency=medium
 
   * Update of translations. (LP: #1761931)
