--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:18.04.18) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.18) bionic; urgency=medium
 
   * data/removal_blacklist.cfg: Drop unity, ubuntu-gnome-desktop, and
     ubuntu-mate-cloudtop from the blacklist as they are no longer critical to
     keep installed. (LP: #1768620)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 02 May 2018 12:31:08 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 02 May 2018 12:43:44 -0700
 
 ubuntu-release-upgrader (1:18.04.17) bionic; urgency=medium
 
