Add upgrade telemetry information (LP: #1755456)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.04.19) UNRELEASED; urgency=medium
+
+  * Add upgrade telemetry information (LP: #1755456)
+
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 03 May 2018 15:55:34 +0200
+
 ubuntu-release-upgrader (1:18.04.18) bionic; urgency=medium
 
   * data/removal_blacklist.cfg: Drop unity, ubuntu-gnome-desktop, and
