* DistUpgrade/{EOL,Devel}ReleaseAnnouncement,   DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 18.04 -> 18.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:18.10.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:
+    - updated for 18.04 -> 18.10
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 08 May 2018 11:12:08 -0700
+
 ubuntu-release-upgrader (1:18.04.18) bionic; urgency=medium
 
   * data/removal_blacklist.cfg: Drop unity, ubuntu-gnome-desktop, and
