--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.1) cosmic; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/window_main.ui,
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:18.10.1) UNRELEASED; urgency=medium
     pre-build.sh:
     - updated for 18.04 -> 18.10
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 08 May 2018 11:12:08 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 08 May 2018 11:13:45 -0700
 
 ubuntu-release-upgrader (1:18.04.18) bionic; urgency=medium
 
