--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ubuntu-release-upgrader (1:18.04.19) UNRELEASED; urgency=medium
 
   * Add upgrade telemetry information (LP: #1755456)
+  * Updated translations
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 03 May 2018 15:55:34 +0200
 
