--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.04.19) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.04.19) bionic; urgency=medium
 
   * Add upgrade telemetry information (LP: #1755456)
   * Updated translations
