--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
 ubuntu-release-upgrader (1:18.10.3) UNRELEASED; urgency=medium
 
+  [ Dimitri John Ledkov ]
   * Purge obsolete packages, if user agrees to remove obsolete
     packages. LP: #1749199
   * Make dist-upgrade.py work when PWD != datadir, by fixing the logic for
     finding and loading .release config files with datadir prepended
     first.
 
- -- Dimitri John Ledkov <xnox@ubuntu.com> Wed, 27 Jun 2018 16:28:01 -0700
+  [ Brian Murray ]
+  * DistUpgrade/DistUpgradeCache.py: clarify why a package is not removed.
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 27 Jun 2018 16:28:01 -0700
 
 ubuntu-release-upgrader (1:18.10.2) cosmic; urgency=medium
 
