--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.3) cosmic; urgency=medium
 
   [ Dimitri John Ledkov ]
   * Purge obsolete packages, if user agrees to remove obsolete
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:18.10.3) UNRELEASED; urgency=medium
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeCache.py: clarify why a package is not removed.
 
- -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 27 Jun 2018 16:28:01 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 27 Jun 2018 16:34:25 -0700
 
 ubuntu-release-upgrader (1:18.10.2) cosmic; urgency=medium
 
