DistUpgradeQuirks.py, DistUpgradeController.py: move inhibiting of gnome-session idle so that it is called immediately after the upgrade starts (LP: #1778817), present a dialog notifying that the lock screen has been disabled (LP: #1174093), and do not reenable the lock screen as it may fail to work after a release upgrade. (LP: #1780342)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:18.10.4) UNRELEASED; urgency=medium
+
+  * DistUpgradeQuirks.py, DistUpgradeController.py: move inhibiting of
+    gnome-session idle so that it is called immediately after the upgrade
+    starts (LP: #1778817), present a dialog notifying that the lock screen has
+    been disabled (LP: #1174093), and do not reenable the lock screen as it
+    may fail to work after a release upgrade. (LP: #1780342)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 05 Jul 2018 16:17:42 -0700
+
 ubuntu-release-upgrader (1:18.10.3) cosmic; urgency=medium
 
   [ Dimitri John Ledkov ]
