--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.4) cosmic; urgency=medium
 
   * DistUpgradeQuirks.py, DistUpgradeController.py: move inhibiting of
     gnome-session idle so that it is called immediately after the upgrade
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:18.10.4) UNRELEASED; urgency=medium
     desktop packages with snaps to ensure the system is similar to a fresh
     install.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jul 2018 11:18:07 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jul 2018 11:21:11 -0700
 
 ubuntu-release-upgrader (1:18.10.3) cosmic; urgency=medium
 
