--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:18.10.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.5) cosmic; urgency=medium
 
   * DistUpgradeQuirks.py: when a snap fails to install try the next one
     instead of trying to check the return code of the called process which
     causes a Traceback. (LP: #1781412)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 12 Jul 2018 13:06:40 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 12 Jul 2018 13:07:14 -0700
 
 ubuntu-release-upgrader (1:18.10.4) cosmic; urgency=medium
 
