--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.10.6) UNRELEASED; urgency=medium
+
+  * DistUpgradeQuirks.py: make sure that snapd is installed before trying to
+    use it. (LP: #1783589)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2018 08:59:38 -0700
+
 ubuntu-release-upgrader (1:18.10.5) cosmic; urgency=medium
 
   * DistUpgradeQuirks.py: when a snap fails to install try the next one
