DistUpgradeQuirks.py: update the view with information regarding the progress of snaps being installed. (LP: #1783593)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:18.10.6) UNRELEASED; urgency=medium
 
   * DistUpgradeQuirks.py: make sure that snapd is installed before trying to
     use it. (LP: #1783589)
+  * DistUpgradeQuirks.py: update the view with information regarding the
+    progress of snaps being installed. (LP: #1783593)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2018 08:59:38 -0700
 
