--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
 ubuntu-release-upgrader (1:18.10.6) UNRELEASED; urgency=medium
 
-  * DistUpgradeQuirks.py: make sure that snapd is installed before trying to
-    use it. (LP: #1783589)
-  * DistUpgradeQuirks.py: update the view with information regarding the
-    progress of snaps being installed. (LP: #1783593)
+  * DistUpgradeQuirks.py:
+    - make sure that snapd is installed before trying to use it.
+      (LP: #1783589)
+    - update the view with information regarding the progress of snaps being
+      installed. (LP: #1783593)
+    - when checking for connectivity to the snap store use C.UTF-8 for the
+      language so error message matching works. (LP: #1783738)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2018 08:59:38 -0700
 
