DistUpgrade/DistUpgradeViewGtk3.py: call vte's terminal.feed_child() with the correct parameters thereby fixing a crash. (LP: #1780501)

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ ubuntu-release-upgrader (1:18.10.6) UNRELEASED; urgency=medium
       has completed successfully.
     - Add a telemetry marker to report the time to process migration from deb
       to snaps.
+  * DistUpgrade/DistUpgradeViewGtk3.py: call vte's terminal.feed_child() with
+    the correct parameters thereby fixing a crash. (LP: #1780501)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2018 08:59:38 -0700
 
