--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.6) cosmic; urgency=medium
 
   * DistUpgradeQuirks.py:
     - make sure that snapd is installed before trying to use it.
@@ -15,7 +15,7 @@ ubuntu-release-upgrader (1:18.10.6) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeViewGtk3.py: call vte's terminal.feed_child() with
     the correct parameters thereby fixing a crash. (LP: #1780501)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2018 08:59:38 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 01 Aug 2018 15:06:53 -0700
 
 ubuntu-release-upgrader (1:18.10.5) cosmic; urgency=medium
 
