DistUpgradeController.py: Remove an unnecessary debugging entry when calculating the debs to remove.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:18.10.8) UNRELEASED; urgency=medium
+
+  * DistUpgradeController.py: Remove an unnecessary debugging entry when
+    calculating the debs to remove.
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 09 Aug 2018 15:23:31 -0700
+
 ubuntu-release-upgrader (1:18.10.7) cosmic; urgency=medium
 
   * Upgrade libc6 before other packages to work around trigger issues
