DistUpgradeQuirks.py: Either refresh installed snaps so they use the ubuntu-18.10 channel or install snaps that weren'd installed when upgrading to Ubuntu 18.04. (LP: #1748581)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,11 @@ ubuntu-release-upgrader (1:18.10.8) UNRELEASED; urgency=medium
 
   * DistUpgradeController.py: Remove an unnecessary debugging entry when
     calculating the debs to remove.
+  * DistUpgradeQuirks.py: Either refresh installed snaps so they use the
+    ubuntu-18.10 channel or install snaps that weren'd installed when
+    upgrading to Ubuntu 18.04. (LP: #1748581)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 09 Aug 2018 15:23:31 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 14 Aug 2018 15:58:17 -0700
 
 ubuntu-release-upgrader (1:18.10.7) cosmic; urgency=medium
 
