releasing package ubuntu-release-upgrader version 1:18.10.8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.8) cosmic; urgency=medium
 
   * DistUpgradeController.py: Remove an unnecessary debugging entry when
     calculating the debs to remove.
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:18.10.8) UNRELEASED; urgency=medium
     ubuntu-18.10 channel or install snaps that weren'd installed when
     upgrading to Ubuntu 18.04. (LP: #1748581)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 14 Aug 2018 15:58:17 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 14 Aug 2018 16:00:44 -0700
 
 ubuntu-release-upgrader (1:18.10.7) cosmic; urgency=medium
 
