data/release-upgrades: set Prompt to normal not lts

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:18.10.9) UNRELEASED; urgency=medium
+
+  * data/release-upgrades: set Prompt to normal not lts
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 27 Aug 2018 07:19:50 -0700
+
 ubuntu-release-upgrader (1:18.10.8) cosmic; urgency=medium
 
   * DistUpgradeController.py: Remove an unnecessary debugging entry when
