DistUpgradeQuirks.py: if ubuntu-desktop or snapd isn't in the package cache don't try and run the quirk for installing or upgrading snaps. (LP: #1787668)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 ubuntu-release-upgrader (1:18.10.9) UNRELEASED; urgency=medium
 
   * data/release-upgrades: set Prompt to normal not lts
+  * DistUpgradeQuirks.py: if ubuntu-desktop or snapd isn't in the package
+    cache don't try and run the quirk for installing or upgrading snaps.
+    (LP: #1787668)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 27 Aug 2018 07:19:50 -0700
 
