DistUpgradeQuirks.py: Only refresh installed snaps to the ubuntu-18.10 channel if they are tracking the ubuntu-18.04 channel. (LP: #1748581)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ ubuntu-release-upgrader (1:18.10.9) UNRELEASED; urgency=medium
   * DistUpgradeQuirks.py: if ubuntu-desktop or snapd isn't in the package
     cache don't try and run the quirk for installing or upgrading snaps.
     (LP: #1787668)
+  * DistUpgradeQuirks.py: Only refresh installed snaps to the ubuntu-18.10
+    channel if they are tracking the ubuntu-18.04 channel. (LP: #1748581)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 27 Aug 2018 07:19:50 -0700
 
