--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.9) cosmic; urgency=medium
 
   * data/release-upgrades: set Prompt to normal not lts
   * DistUpgradeQuirks.py: if ubuntu-desktop or snapd isn't in the package
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:18.10.9) UNRELEASED; urgency=medium
   * DistUpgradeQuirks.py: Only refresh installed snaps to the ubuntu-18.10
     channel if they are tracking the ubuntu-18.04 channel. (LP: #1748581)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 27 Aug 2018 07:19:50 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 28 Aug 2018 13:09:55 -0700
 
 ubuntu-release-upgrader (1:18.10.8) cosmic; urgency=medium
 
