--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:18.10.10) UNRELEASED; urgency=medium
+
+  * DistUpgradeViewKDE.py:
+    - exitMainLoop is now exitMainLoopMidFlight to make it clearer that
+      it is run while the app is still running. it's a hack and not
+      the actual exit point
+    - inhibit kscreenlocker while the UI is up to prevent the lock screen
+      from breaking during upgrades and then complain to the user
+
+ -- Harald Sitter <sitter@kde.org>  Wed, 29 Aug 2018 14:03:55 +0200
+
 ubuntu-release-upgrader (1:18.10.9) cosmic; urgency=medium
 
   * data/release-upgrades: set Prompt to normal not lts
