--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:18.10.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:18.10.10) cosmic; urgency=medium
 
   [ Harald Sitter ]
   * DistUpgradeViewKDE.py:
@@ -15,7 +15,7 @@ ubuntu-release-upgrader (1:18.10.10) UNRELEASED; urgency=medium
     creating an issue with apt's problem resolver try the full upgrade. This
     is what would have happened before the fix for bug 1766890. (LP: #1787649)
 
- -- Harald Sitter <sitter@kde.org>  Wed, 29 Aug 2018 14:03:55 +0200
+ -- Brian Murray <brian@ubuntu.com>  Fri, 31 Aug 2018 15:36:32 -0700
 
 ubuntu-release-upgrader (1:18.10.9) cosmic; urgency=medium
 
