--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:18.10.11) UNRELEASED; urgency=medium
+
+  * do-release-upgrade: do not run the release upgrade if either not all
+    updates are installed or a reboot is required due to a libc6 upgrade.
+    (LP: #1797209)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 10 Oct 2018 14:06:16 -0700
+
 ubuntu-release-upgrader (1:18.10.10) cosmic; urgency=medium
 
   [ Harald Sitter ]
