debian/control: change ubuntu-release-upgrader-core to depend on ca-certificates (LP: #1796940)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ ubuntu-release-upgrader (1:18.10.11) cosmic; urgency=medium
   * do-release-upgrade: do not run the release upgrade if either not all
     updates are installed or a reboot is required due to a libc6 upgrade.
     (LP: #1797209)
+  * debian/control: change ubuntu-release-upgrader-core to depend on
+    ca-certificates (LP: #1796940)
   * Update of demotions and mirrors data.
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 10 Oct 2018 14:10:29 -0700
