DistUpgrade/DistUpgradeController.py: check the python3 symlink and version instead of the python one. (LP: #1799839)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: check the python3 symlink and
+    version instead of the python one. (LP: #1799839)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 30 Oct 2018 16:22:20 -0700
+
 ubuntu-release-upgrader (1:18.10.11) cosmic; urgency=medium
 
   * do-release-upgrade: do not run the release upgrade if either not all
