Update for upgrading to 19.04

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium
 
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:
+    - updated for 18.10 -> 19.04
   * DistUpgrade/DistUpgradeController.py: check the python3 symlink and
     version instead of the python one. (LP: #1799839)
 
