do-release-upgrade: Do not block release upgrades if the installable updates are ones which are not fully phased. (LP: #1799710)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium
     - updated for 18.10 -> 19.04
   * DistUpgrade/DistUpgradeController.py: check the python3 symlink and
     version instead of the python one. (LP: #1799839)
+  * do-release-upgrade: Do not block release upgrades if the installable
+    updates are ones which are not fully phased. (LP: #1799710)
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 30 Oct 2018 16:22:20 -0700
 
