releasing package ubuntu-release-upgrader version 1:19.04.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.1) disco; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/window_main.ui,
@@ -12,7 +12,7 @@ ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium
   * do-release-upgrade: Do not block release upgrades if the installable
     updates are ones which are not fully phased. (LP: #1799710)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 30 Oct 2018 16:22:20 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 31 Oct 2018 15:14:25 -0700
 
 ubuntu-release-upgrader (1:18.10.11) cosmic; urgency=medium
 
