--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:18.10.11.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: check all the python symlinks and
+    versions instead of the python one. Thanks to juliank for the assistance.
+    (LP: #1799839)
+  * do-release-upgrade: Do not block release upgrades if the installable
+    updates are ones which are not fully phased. (LP: #1799710)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 31 Oct 2018 16:13:21 -0700
+
 ubuntu-release-upgrader (1:18.10.11) cosmic; urgency=medium
 
   * do-release-upgrade: do not run the release upgrade if either not all
