--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.04.2) disco; urgency=medium
+
+  * Dual-sign release-upgrader tarballs with both 2012 & 2018 archive
+    keys.
+  * Update mirrors.
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Fri, 02 Nov 2018 14:09:11 +0000
+
 ubuntu-release-upgrader (1:19.04.1) disco; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
