--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.3) disco; urgency=medium
+
+  * Remove lubuntu-core as a supported metapackage and a dependency of
+    lubuntu-desktop.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 02 Nov 2018 17:39:26 -0500
+
 ubuntu-release-upgrader (1:19.04.2) disco; urgency=medium
 
   * Dual-sign release-upgrader tarballs with both 2012 & 2018 archive
