Set icon_name in the dialogs so that there will be an icon in gnome-shell. (LP: #1797384)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.4) UNRELEASED; urgency=medium
+
+  * Set icon_name in the dialogs so that there will be an icon in gnome-shell.
+    (LP: #1797384)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 07 Nov 2018 15:53:45 -0800
+
 ubuntu-release-upgrader (1:19.04.3) disco; urgency=medium
 
   * Remove lubuntu-core as a supported metapackage and a dependency of
