releasing package ubuntu-release-upgrader version 1:19.04.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:19.04.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.4) disco; urgency=medium
 
   * Set icon_name in the dialogs so that there will be an icon in gnome-shell.
     (LP: #1797384)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 07 Nov 2018 15:53:45 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 07 Nov 2018 15:55:25 -0800
 
 ubuntu-release-upgrader (1:19.04.3) disco; urgency=medium
 
