--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:19.04.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.5) disco; urgency=medium
 
   * Remove the unused computer janitor code thereby resolving a Traceback that
     occurs when importing it. (LP: #1805475)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 27 Nov 2018 09:14:33 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 27 Nov 2018 09:17:35 -0800
 
 ubuntu-release-upgrader (1:19.04.4) disco; urgency=medium
 
