--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.6) UNRELEASED; urgency=medium
+
+  * data/release-upgrades: Clarify documentation regarding the behavior for
+    different Prompt settings. (LP: #1795024)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 08:54:09 -0800
+
 ubuntu-release-upgrader (1:19.04.5) disco; urgency=medium
 
   * Remove the unused computer janitor code thereby resolving a Traceback that
