do-release-upgrade: Utilize information regarding what Prompt is set to so that a more informative error message can be displayed. (LP: #1798618, LP: #1795024)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,11 @@ ubuntu-release-upgrader (1:19.04.6) UNRELEASED; urgency=medium
 
   * data/release-upgrades: Clarify documentation regarding the behavior for
     different Prompt settings. (LP: #1795024)
+  * do-release-upgrade: Utilize information regarding what Prompt is set to so
+    that a more informative error message can be displayed.
+    (LP: #1798618, LP: #1795024)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 08:54:09 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 10:00:01 -0800
 
 ubuntu-release-upgrader (1:19.04.5) disco; urgency=medium
 
