releasing package ubuntu-release-upgrader version 1:19.04.6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.6) disco; urgency=medium
 
   * data/release-upgrades: Clarify documentation regarding the behavior for
     different Prompt settings. (LP: #1795024)
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:19.04.6) UNRELEASED; urgency=medium
     that a more informative error message can be displayed.
     (LP: #1798618, LP: #1795024)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 10:00:01 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 10:02:43 -0800
 
 ubuntu-release-upgrader (1:19.04.5) disco; urgency=medium
 
