--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
+    mount points don't use a negative number as the buffer. (LP: #1786484)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 11:10:35 -0800
+
 ubuntu-release-upgrader (1:19.04.6) disco; urgency=medium
 
   * data/release-upgrades: Clarify documentation regarding the behavior for
