fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
     mount points don't use a negative number as the buffer. (LP: #1786484)
+  * fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 11:10:35 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 14:11:10 -0800
 
 ubuntu-release-upgrader (1:19.04.6) disco; urgency=medium
 
