--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
     mount points don't use a negative number as the buffer. (LP: #1786484)
   * fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY
+
+  [ Jeremy Bicha ]
+  * autopkgtest: Update dependency from gir1.2-webkit-3.0 to gir1.2-webkit2-4.0
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 14:11:10 -0800
 
