releasing package ubuntu-release-upgrader version 1:19.04.7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.7) disco; urgency=medium
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
@@ -23,7 +23,7 @@ ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium
   [ Jeremy Bicha ]
   * autopkgtest: Update dependency from gir1.2-webkit-3.0 to gir1.2-webkit2-4.0
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 14:11:10 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 11 Dec 2018 15:35:34 -0800
 
 ubuntu-release-upgrader (1:19.04.6) disco; urgency=medium
 
